--- a/app/assets/stylesheets/locationstyle.css
+++ b/app/assets/stylesheets/locationstyle.css
@@ -21,3 +21,37 @@
 #map {
 	height: 80%;
 }
+
+.loading {
+	text-align: center;
+	padding-right: 45%;
+	padding-top: 20%;
+	height: 100%;
+}
+
+.loading img {
+	position: absolute;
+  width: 45%;
+}
+
+@media (min-width:720px) {
+	.loading {
+		padding-right: 30%;
+		padding-top: 10%;
+	}
+
+	.loading img {
+  width: 30%;
+	}
+}
+
+@media (min-width:960px) {
+	.loading {
+		padding-right: 20%;
+		padding-top: 10%;
+	}
+
+	.loading img {
+  width: 20%;
+	}
+}
