--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,113 +1,21 @@
 <div class="main">
 	<div class="title">Markco 1</div>
+	<% if user_signed_in? then %>
+		<%= link_to("Sign Out", destroy_user_session_path, method: :delete) %>
+		<% else %>
+		<%= link_to("Sign In", user_session_path) %>
+		<% end %>
+
 	<div class="yourlocation" id="yourlocation">
 		<div id="map">
-			<div class="loading">  <!-- shows loading gif then gets over-written by map when loaded -->
+			<div class="loading">  
 				<%= image_tag "loading.gif" %>
 			</div> 
-		<div>
+		</div>
 		<div id="status"></div>
 		<div id="status2"></div>
 		<div id="status3"></div>
 
-    <script>
-      var map;
-      var infoWindow;
-      var bounds;
-      var myPosition;
-      var myMarker;
-      var myWatcher;
-      var myIcon = "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png";
-
-      
-
-      function initMap() {
-      	var updates = 0;
-       	bounds = new google.maps.LatLngBounds();
-       	getMyLocation(function () {
-       		var options = {
-												  enableHighAccuracy: true,
-												  timeout: Infinity,
-												  maximumAge: 1000
-												}
-       		createMap();
-       		placeMyMarker(myPosition, "", "YOU", "http://www.fakefakefake.gov/", myIcon);
-	        map.fitBounds(bounds);
-	        map.setCenter(myPosition);
-	        console.log("starting position: " + myPosition.lat + "," + myPosition.lng);
-	        document.getElementById('status').innerHTML = myPosition.lat + "," + myPosition.lng;
-	        myWatcher = navigator.geolocation.watchPosition(function(position) {
-					  //update location marker
-					  updates += 1;
-					  console.log(position);
-					  myPosition.lat = position.coords.latitude;
-					  myPosition.lng = position.coords.longitude;
-					  document.getElementById('status2').innerHTML = myPosition.lat + "," + myPosition.lng;
-					  document.getElementById('status3').innerHTML = "updates: " + updates;
-					  myMarker.setPosition(myPosition);
-	        	map.setCenter(myPosition);
-					}, function(err){ console.log(err) }, options);
-       	});
-
-       	function createMap() {
-					map = new google.maps.Map(document.getElementById('map'), {			// CREATE MAP CENTERED ON MYPOSITION
-		        center: myPosition,
-		        zoom: 13,
-		        mapTypeId: 'hybrid'
-		      });    
-		      console.log("map: " + map)
-		    }
-
-		    function getMyLocation(callback) {
-		    	if (navigator.geolocation) {																		// GET MYLOCATION
-	          navigator.geolocation.getCurrentPosition(function(position) {
-	            myPosition = {
-	              lat: position.coords.latitude,
-	              lng: position.coords.longitude
-	            }
-	            console.log("my position: " + myPosition);
-	            callback && callback();
-	          });
-	        } else {
-	          // Browser doesn't support Geolocation
-	          document.getElementById('map').innerHTML = "Browser doesn't support Geolocation";
-	        }
-		    }
-      }
-
-      function placeMyMarker(pos, label, title, url, image) {
-      	myMarker = new google.maps.Marker({
-          position: new google.maps.LatLng(pos),
-          label: label,
-          title: title,
-          url: url,
-          animation: google.maps.Animation.DROP,
-          icon: image,
-          map: map
-        });
-        bounds.extend(myMarker.position);
-        google.maps.event.addListener(myMarker, 'click', function() {
-            window.location.href = url;
-        });
-      }
-
-      function placeMarker(pos, label, title, url, image) {
-      	marker = new google.maps.Marker({
-          position: new google.maps.LatLng(pos),
-          label: label,
-          title: title,
-          url: url,
-          animation: google.maps.Animation.DROP,
-          icon: image,
-          map: map
-        });
-        bounds.extend(marker.position);
-        google.maps.event.addListener(marker, 'click', function() {
-            window.location.href = url;
-        });
-      }
-
-    </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWjXhmnA63FsuAVIrTzKRG_D5SJZrDrqg&callback=initMap" async defer></script>
 	</div>
 </div>
