placement and simple style of notices and alerts

--- a/app/assets/stylesheets/locationstyle.css
+++ b/app/assets/stylesheets/locationstyle.css
@@ -22,6 +22,15 @@
 	height: 80%;
 }
 
+.notice {
+	color: green;
+}
+
+.alert {
+	color: red;
+}
+
+
 .loading {
 	text-align: center;
 	padding-right: 45%;
