--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,21 +1,42 @@
 <div class="main">
-	<div class="title">Markco 1</div>
-	<div class="yourlocation" id="yourlocation">
-		<div id="map">
-			<div class="loading">  
-				<%= image_tag "loading.gif" %>
-			</div> 
-		</div>
-		<div id="status"></div>
-		<div id="status2"></div>
-		<div id="status3"></div>
-		
+	<div class="signout">
 		<% if user_signed_in? then %>
 			<%= link_to("Sign Out", destroy_user_session_path, method: :delete) %>
 			<% else %>
 			<%= link_to("Sign In", user_session_path) %>
 		<% end %>
+	</div>
+	
+	<div class="title">Markco 1</div>
+	<div class="yourlocation" id="yourlocation">
+
+		<div id="map">
+			<div class="loading">  
+				<%= image_tag "loading.gif" %>
+			</div> 
+		</div>
+		<p class="notice"><%= notice %></p>
+		<p class="alert"><%= alert %></p>
+
+		<script>
+			setTimeout(fade_out, 7000);
+
+				function fade_out() {
+				  $(".notice").fadeOut(2000, function() { 
+				  	$(this).remove()
+				  });
+				  $(".alert").fadeOut(2000, function() { 
+				  	$(this).remove()
+				  });
+				}
+		</script>
+		<div id="status"></div>
+		<div id="status2"></div>
+		<div id="status3"></div>
+
+		
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWjXhmnA63FsuAVIrTzKRG_D5SJZrDrqg&callback=initMap" async defer></script>
 	</div>
+
 </div>
