--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,21 +1,29 @@
 <div class="main">
 	<div class="signout">
-		<% if user_signed_in? then %>
+		<% if user_signed_in? %>
 			<%= link_to("Sign Out", destroy_user_session_path, method: :delete) %>
 			<% else %>
 			<%= link_to("Sign In", user_session_path) %>
 		<% end %>
 	</div>
 
+
+
 	<div class="tracking">
-		<% if @user.tracking then %>
-			<%= link_to("Stop Tracking", stoptracking_path, method: :patch) %>
+		<% if @user.tracking %>
+			<%= link_to("Hide Location", stoptracking_path, method: :patch) %>
 			<% else %>
-			<%= link_to("Start Tracking", starttracking_path, method: :patch) %>
+			<%= link_to("Show Location", starttracking_path, method: :patch) %>
 		<% end %>
 	</div>
-
-	<div class="title">Markco 1</div>
+	<% if @user.tracking %>
+		<div class="title" style="color: green">Markco 1</div>
+	<% else %>
+		<div class="title" style="color: red">Markco 1</div>
+	<% end %>
+	<div class="userid">
+		<%= @user.email %>
+	</div>
 	<div class="yourlocation" id="yourlocation">
 
 		<div id="map">
@@ -23,17 +31,21 @@
 				<%= image_tag "loading.gif" %>
 			</div> 
 		</div>
-		<p class="notice"><%= notice %></p>
-		<p class="alert"><%= alert %></p>
+		<% if notice %>
+			<p class="notice success alert-box"><%= notice %></p>
+		<% end %>
+		<% if alert %>
+			<p class="alert error alert-box"><%= alert %></p>
+		<% end %>
 
 		<script>
-			setTimeout(fade_out, 7000);
+			setTimeout(fade_out, 5000);
 
 				function fade_out() {
-				  $(".notice").fadeOut(2000, function() { 
+				  $(".notice").fadeOut(1000, function() { 
 				  	$(this).remove()
 				  });
-				  $(".alert").fadeOut(2000, function() { 
+				  $(".alert").fadeOut(1000, function() { 
 				  	$(this).remove()
 				  });
 				}
