invites are working but I just need to set the invite back to user id when done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+	<!-- The Modal -->
+	<div id="myModal" class="modal">
+
+	  <!-- Modal content -->
+	  <div class="modal-content">
+	    <!-- <span class="close">x</span>  -->
+	    <div class="inviteMessage"><span id="userInviting"></span> has invited you to join their map!</div>
+	    <div class="inviteButtons"><span id="acceptInvite">Accept</span><span id="declineInvite">Decline</span></div>
+	  </div>
+
+	</div>
 
 	<%= yield %>
 
