--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,6 @@
 	</div>
 
 
-
 	<div class="tracking">
 		<% if @user.tracking %>
 			<%= link_to("Hide Location", stoptracking_path, method: :patch) %>
@@ -31,6 +30,10 @@
 				<%= image_tag "loading.gif" %>
 			</div> 
 		</div>
+		<div class="bottomButtons">
+			<span class="invite generalbutton" id="invitebutton">Invite</span>
+			<span class="home generalbutton" id="homebutton">Home</span>
+		</div>
 		<% if notice %>
 			<p class="notice success alert-box"><%= notice %></p>
 		<% end %>
@@ -51,9 +54,9 @@
 			}
 
 		</script>
-		<div id="status"></div>
-		<div id="status2"></div>
-		<div id="status3"></div>
+		<div id="status" class="status"></div>
+		<!-- <div id="status2" class="status"></div>
+		<div id="status3" class="status">status 3</div>  -->
 
 		
 
