styling on status and alert boxes

--- a/app/assets/stylesheets/locationstyle.css
+++ b/app/assets/stylesheets/locationstyle.css
@@ -3,7 +3,7 @@
 	position: absolute;
 	border: 1px solid black;
 	border-radius: 10px;
-	height: 90%;
+	height: 92%;
 	width: 95%;
 }
 
@@ -63,8 +63,8 @@
 		color:#555;
     border-radius:10px;
     font-family:Tahoma,Geneva,Arial,sans-serif;font-size:11px;
-    padding:10px 10px 10px 36px;
-    margin:10px;
+    padding:6px 10px 10px 36px;
+    margin-top:3.5%;
 }
 
 .error {
@@ -121,6 +121,10 @@
 	.status {
 		margin-top: 0%;
 	}
+
+	.alert-box {
+		margin-top:2%;
+	}
 }
 
 @media (min-width:960px) {
@@ -146,6 +150,11 @@
 	.bottomButtons {
 		margin-top: 2%;
 		text-align: center;
+	}
+
+	.alert-box {
+		padding:2px 6px 2px 36px;
+		margin-top:1%;
 	}
 
 }
