display LEAVE GROUP when in someone elses group, display INVITE when in your own group. automatically assign room and invite to your user id upon signing in

--- a/app/assets/stylesheets/locationstyle.css
+++ b/app/assets/stylesheets/locationstyle.css
@@ -85,11 +85,15 @@
 }
 
 .invite {
-	margin-right: 25%;
+	margin-right: 0%;
 }
 
-.home {
+#homebutton {
+	display: none;
+}
 
+#invitebutton {
+	display: none;
 }
 
 .status {
