--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,8 +31,8 @@
 			</div> 
 		</div>
 		<div class="bottomButtons">
-			<span class="invite generalbutton" id="invitebutton">Invite</span>
-			<span class="home generalbutton" id="homebutton">Home</span>
+			<span class="invite generalbutton" id="invitebutton">Invite Friends</span>
+			<span class="home generalbutton" id="homebutton">Leave Group</span>
 		</div>
 		<% if notice %>
 			<p class="notice success alert-box"><%= notice %></p>
