Invite works, pulls up user list, javascript confirm being used temporarily to confirm invite

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,22 @@
 	  </div>
 
 	</div>
+
+	<div id="myModal2" class="modal2">
+
+	  <!-- Modal content -->
+	  <div class="modal-content2">
+	  	<span class="close" id="close">x</span>
+	    <div class="userListHeader" id="userListHeader"></div>
+	    <div>
+	    	<ul class="userList" id="userList">
+
+	    	</ul>
+	    </div>
+	  </div>
+
+	</div>
+
 	<div class="mainmain">
 
 		<%= yield %>
