--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -41,12 +41,58 @@
 }
 
 
-/* The Close Button 
+/* The Modal (background) */
+.modal2 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content2 {
+    position: relative;
+    background-color: #f2f2f2;
+    margin: 15% auto; /* 45% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    border-radius: 15px;
+    width: 70%; /* Could be more or less, depending on screen size */
+    font-size: 0.9em;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatebottom;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatebottom {
+    from {top: 35%; opacity: 0} 
+    to {top: 0; opacity: 1}
+}
+
+@keyframes animatebottom {
+    from {top: 35%; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
+
+/* The Close Button */
 .close {
     color: #aaa;
     float: right;
-    font-size: 28px;
+    font-family: sans-serif;
+    font-size: 20px;
     font-weight: bold;
+    margin-top:-20px;
+    margin-right: -10px;
 }
 
 .close:hover,
@@ -54,7 +100,7 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
-} */
+}
 
 .inviteMessage {
     text-align: center;
@@ -82,14 +128,45 @@
     cursor: pointer;
 }
 
+.userListHeader {
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.userList {
+    list-style-type: none;
+    padding-left:10%;
+}
+
+.userListItem {
+    margin-right: 15%;
+    margin-bottom: 1%;
+    padding: 2% 2% 2% 5%;
+    border: 1px solid black;
+    border-radius: 10px;
+
+}
+
+.userListItem:hover {
+    background-color: #D9D9D9;
+    cursor: pointer;
+}
+
 
 
 @media (min-width:720px) {
-    .modal-content {
+    .modal-content, {
         margin: 25% auto;
         width: 50%;
         font-size: 1.1em;
     }
+
+    .modal-content2, {
+        margin: 25% auto;
+        width: 50%;
+        font-size: 1.1em;
+    }
+
 
 
 }
