--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -48,7 +48,12 @@
 
 		</script>
 		<div id="status" class="status">
-
+			<% if notice %>
+				<p class="notice success alert-box"><%= notice %></p>
+			<% end %>
+			<% if alert %>
+				<p class="alert error alert-box"><%= alert %></p>
+			<% end %>
 		</div>
 
 
