--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,16 +35,16 @@
 			<span class="home generalbutton" id="homebutton">Leave Group</span>
 		</div>
 		<script>
-			setTimeout(fade_out, 5000);
+			//setTimeout(fade_out, 5000);
 
-			function fade_out() {
-			  $(".notice").fadeOut(2000, function() { 
-			  	$(this).remove()
-			  });
-			  $(".alert").fadeOut(2000, function() { 
-			  	$(this).remove()
-			  });
-			}
+			// function fade_out() {
+			//  $(".notice").fadeOut(2000, function() { 
+			//  	$(this).remove()
+			//  });
+			//  $(".alert").fadeOut(2000, function() { 
+			//  	$(this).remove()
+			//  });
+			//}
 
 		</script>
 		<div id="status" class="status">
