--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,21 +31,21 @@
 			</div> 
 		</div>
 		<div class="bottomButtons">
-			<span class="invite generalbutton" id="invitebutton">Invite Friends</span>
-			<span class="home generalbutton" id="homebutton">Leave Group</span>
+			<span class="invite generalbutton" id="invitebutton">Invite</span>
+			<span class="home generalbutton" id="homebutton">Leave</span>
+			<span class="remove generalbutton" id="removebutton">Remove</span>
 		</div>
 		<script>
-			//setTimeout(fade_out, 5000);
+			setTimeout(fade_out, 5000);
 
-			// function fade_out() {
-			//  $(".notice").fadeOut(2000, function() { 
-			//  	$(this).remove()
-			//  });
-			//  $(".alert").fadeOut(2000, function() { 
-			//  	$(this).remove()
-			//  });
-			//}
-
+			 function fade_out() {
+			  $(".notice").fadeOut(2000, function() { 
+					$(".notice").remove();
+			  });
+			  $(".alert").fadeOut(2000, function() { 
+			 		$(".alert").remove();
+			  });
+			}
 		</script>
 		<div id="status" class="status">
 			<% if notice %>
