--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,6 +1,6 @@
 <%= render "devise/shared/alerts" %>
 
-<div class="login">
+<div class="login container">
 
 	<h2>Resend confirmation instructions</h2>
 
