--- a/app/views/devise/shared/_alerts.html.erb
+++ b/app/views/devise/shared/_alerts.html.erb
@@ -1,4 +1,4 @@
-<div id="status" class="status">
+<div id="statusalerts" class="statusalerts">
 	<% if notice %>
 		<p class="notice success alert-box"><%= notice %></p>
 	<% end %>
