use sprockets image url link in css 2

--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -21,7 +21,7 @@
 }
 
 .mainlogo {
-    background-image: image-url("/assets/markcologo.png");
+    background-image: image-url("markcologo.png");
     background-size: contain;
 		background-size: 70%;
     background-position-y: 24vh;
