--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,6 +1,8 @@
 <%= render "devise/shared/alerts" %>
 
-<div class="login container">
+<div class="login">
+
+	<div class="mainlogo"></div>
 
 	<h2>Resend confirmation instructions</h2>
 
