finished most misc login screens

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -2,23 +2,26 @@
 
 <div class="login">
 
-	<div class="mainlogo"></div>
-
-	<h2>Resend confirmation instructions</h2>
+  <%= link_to(new_session_path(resource_name)) do %>
+    <div class="mainlogo"></div>
+  <% end %>
 
 	<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
 	  <%= devise_error_messages! %>
 
 	  <div class="field">
-	    <%= f.label :email %><br />
-	    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %> 
+	    <%= f.email_field :email, placeholder: "enter e-mail address", autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %> 
 	  </div>
+	  <div class="forgotpassword">
+      <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+        <%= link_to "forgot password?", new_password_path(resource_name) %><br />
+      <% end -%>
+    </div>
+
 
 	  <div class="actions">
-	    <%= f.submit "Resend confirmation instructions" %>
+	    <%= f.submit "Resend" %>
 	  </div>
 	<% end %>
-
-	<%= render "devise/shared/links" %>
 
 </div>
