--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,20 +1,26 @@
 <%= render "devise/shared/alerts" %>
 
 <div class="login">
-	<h2>Forgot your password?</h2>
+
+	<%= link_to(new_session_path(resource_name)) do %>
+    <div class="mainlogo"></div>
+  <% end %>
 
 	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 	  <%= devise_error_messages! %>
 
 	  <div class="field">
-	    <%= f.label :email %><br />
-	    <%= f.email_field :email, autofocus: true %>
+	    <%= f.email_field :email, placeholder: "enter e-mail address to reset password", autofocus: true %>
 	  </div>
+	  <div class="forgotpassword">
+			<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+			  <%= link_to "Didn't receive confirmation?", new_confirmation_path(resource_name) %><br />
+			<% end -%>
+		</div>
 
 	  <div class="actions">
-	    <%= f.submit "Send me reset password instructions" %>
+	    <%= f.submit "Reset" %>
 	  </div>
 	<% end %>
 
-	<%= render "devise/shared/links" %>
 </div>
