--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,9 @@
 
 <div class="login">
 
-  <div class="mainlogo signuplogo"></div>
+  <%= link_to(new_session_path(resource_name)) do %>
+    <div class="mainlogo signuplogo"></div>
+  <% end %>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
