--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -7,10 +7,10 @@
   <% end %>
 
 	<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-	  <%= devise_error_messages! %>
 
 	  <div class="field">
-	    <%= f.email_field :email, placeholder: "enter e-mail address", autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %> 
+	  	<%= f.label :send_new_email_confirmation %><br />
+	    <%= f.email_field :email, placeholder: if (resource.errors[:email]).blank? then "e-mail address" else ("e-mail " + resource.errors[:email][0].to_s) end, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %> 
 	  </div>
 	  <div class="forgotpassword">
       <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
@@ -20,8 +20,20 @@
 
 
 	  <div class="actions">
-	    <%= f.submit "Resend" %>
+	    <%= f.submit "RESEND" %>
 	  </div>
 	<% end %>
+
+	<script>
+    
+    var emailElement = document.getElementById("user_email");
+
+    emailElement.oninput = function(){ 
+      emailElement.placeholder = "";
+      emailElement.parentElement.className = "";
+    };
+
+  </script>
+
 
 </div>
