navbar styling on main page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,10 @@
+<div class="navbar-markco">
+	<div class="navleft"><div class="avatar"></div></div>
+	<div class="navmiddle"><div class="iconlogo"></div></div>
+	<div class="navright"><div class="hamburger glyphicon glyphicon-menu-hamburger"></div></div>
+
+</div>
+	
 <div class="main">
 	<div class="signout">
 		<% if user_signed_in? %>
