--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,11 @@
 
  /* Then, remove all the  require and require_tree statements (removed require_tree . and require_self) from the Sass file. Instead, use @import to import Sass files.
  */
- @import "bootstrap";
+
+
  @import "locationstyle";
  @import "modal";
  @import "login";
+ @import "bootstrap";
+  @import "navbar";
  
