--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,19 @@
 	<div class="navleft"><div class="avatar"></div></div>
 	<div class="navmiddle"><div class="iconlogo"></div></div>
 	<div class="navright"><div class="hamburger glyphicon glyphicon-menu-hamburger"></div></div>
-
 </div>
+<div class="dropdown-nav">
+	<div class="dropdown-email">testing@testing.com</div>
+	<ul>
+		<li id="dropdownhome">Home</li>
+		<li id="dropdownprofile">Profile</li>
+		<li id="dropdowninvite">Invite</li>
+		<li id="dropdownremove">Remove</li>
+	</ul>
+	<div class="dropdown-tracking">Tracking - <%= image_tag "toggle-on.png" %></span></div>
+	<div class="dropdown-signout">Sign Out</div>
+</div>
+
 	
 <div class="main">
 	<div class="signout">
